docs: добавлен javadoc